# sakaya

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  nix.yml  tests.yml
client/: Cargo.toml  README.md
client/src/: main.rs
completions/: _sakaya  sakaya.bash  sakaya.fish
man/: sakaya.1
nix/: gtk4-layer-shell.nix  module.nix  osu.nix  package.nix  shell.nix
sakaya-cli/: Cargo.toml  README.md
sakaya-cli/src/: main.rs
sakaya-client/: Cargo.toml  README.md
sakaya-client/src/: main.rs
sakaya-gotham/: Cargo.toml
sakaya-gotham/src/: main.rs
sakaya-gui/: Cargo.toml  README.md
sakaya-gui/src/: main.rs
sakaya-server/: Cargo.toml  README.md
sakaya-server/src/: main.rs
sakaya-tide/: Cargo.toml
sakaya-tide/src/: main.rs
server/: Cargo.toml  README.md
server/src/: main.rs
src/: cli.rs  client.rs  lib.rs  main.rs  runner.rs  server.rs  util.rs
src/cli/: clap.rs  mod.rs
src/client/: desktop.rs  exec.rs  get_target_machine.rs  icon.rs  mod.rs  request.rs  xauth.rs
src/consts/: defaults.rs  mod.rs
src/server/: mod.rs  router.rs  serve.rs
src/server/routes/: index.rs  init.rs  mod.rs  open.rs  winecfg.rs  winetricks.rs
src/state/: mod.rs  options.rs
tests/: icon.rs  options.rs  release.rs  xauth.rs
