[package]
name = "sakaya"
description = "Run native wine applications inside declarative systemd-nspawn containers."
version = "0.1.0"
authors = ["Copyright (C) 2023 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/sakaya"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
home = "0.5.9"
ico = "0.3.0"
local-ip-address = "0.6.1"
minreq = "2.11.2"
pelite = "0.10.0"
urlencoding = "2.1.3"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.1"
clap_mangen = "0.2.20"

[dev-dependencies]
assert_cmd = "2.0.12"
rustympkglib = "0.1.1"
serde = "1.0.197"
toml = "0.8.12"
