[package]
name = "sakaya"
description = "Run native wine applications inside declarative systemd-nspawn containers."
version = "0.1.0"
authors = ["Copyright (C) 2023-2025 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/sakaya"
license = "MIT"
edition = "2021"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.26", features = ["derive"] }
home = "0.5.11"
ico = "0.3.0"
local-ip-address = "0.6.3"
minreq = { version = "2.13.0", features = ["json-using-serde"] }
notify-rust = "4.11.3"
pelite = "0.10.0"
serde = "1.0.214"
tokio = { version = "1.41.0", features = ["full"] }
urlencoding = "2.1.3"

[build-dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clap_complete = "4.5.40"
clap_mangen = "0.2.26"

[dev-dependencies]
assert_cmd = "2.0.16"
rustympkglib = "0.1.1"
serde = "1.0.214"
toml = "0.8.15"
