[package]
name = "sakaya-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = { version = "0.6.3", package = "gdk4", features = ["v4_10"] }
gio = "0.17.10"
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
gtk-layer-shell = { version = "0.0.3", package = "gtk4-layer-shell" }
